# ai-proxy

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
src/ai_proxy/: main.py
src/ai_proxy/assets/: prompts.py
src/ai_proxy/core/: auth.py  config.py  rate_limit.py
src/ai_proxy/integrations/: openai_client.py
src/ai_proxy/routes/: health.py  menu.py  responses.py
tests/: conftest.py
tests/routes/: test_menu.py  test_responses.py
