[project]
name = "ai-proxy"
version = "0.1.0"
description = "FastAPI-based proxy gateway for OpenAI Responses API"
readme = "README.md"
authors = [{ name = "ai-proxy contributors" }]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.4",
  "PyJWT[crypto]>=2.9.0",
  "openai>=1.30.0"
]

[project.optional-dependencies]
deploy = [
  "python-dotenv>=1.0.1"
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "ruff>=0.3.5",
  "pytest>=8.1.1",
  "pytest-asyncio>=0.23.5",
  "pytest-cov>=5.0.0"
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"
